--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>My Resume</title>
-
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -14,6 +14,71 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class= "wrapcontainer">
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+
+    <section class="topresume">
+      <img src="/images/workingstation.jpg" alt="Well organized workspace">
+      <h1>Stella Edelmann - Web Developer</h1>
+      <h2>Technology is my jam!</h2>
+      <hr>
+      <p>Occasionally I have time to work on side projects. If you're interested, let me know by signing up on this website!</p>
+      <a href="#"><div class="btn">Let's Team Up</div></a>
+    </section>
+    <div class="listen">
+        <section class="listenup summary">
+          <h3>Listen Up..</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita similique possimus eligendi quod quisquam excepturi aut laudantium fugit tempore laborum? Ducimus ratione doloribus exercitationem commodi eum nostrum, tempora provident earum!</p>
+        </section>
+        <section class="skillset summary half">
+          <h4>Stuff I'm Good At:</h4>
+          <ul>
+            <li>Disc Golf</li>
+            <li>Coding up UI</li>
+            <li>Playing lots of video games</li>
+            <li>Using Bootstrap grid</li>
+            <li>Taking long naps</li>
+          </ul>
+
+        </section>
+    </div>
+    <section class="work-history">
+      <h4>Work History</h4>
+      <table>
+        <tr>
+          <th>Yrs</th>
+          <th>Company</th>
+          <th>Title</th>
+          <th>Tech Used</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Apple</td>
+            <td>Software Engineer</td>
+            <td>Swift</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Microsoft</td>
+            <td>Computer Scientist</td>
+            <td>.NET</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Amazon</td>
+            <td>Dev Ops</td>
+            <td>AWS</td>
+          </tr>
+      </table>
+    </section>
+    <footer class="copyright">Copyright Awesomeness 2018</footer> 
+  </div>
 </body>
 </html>
