--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     </section>
     <div class="listen">
         <section class="listenup summary">
-          <h3>Listen Up..</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita similique possimus eligendi quod quisquam excepturi aut laudantium fugit tempore laborum? Ducimus ratione doloribus exercitationem commodi eum nostrum, tempora provident earum!</p>
+          <h3>Hi There!</h3>
+          <p>I'm a talented programmer! Hire me!</p>
         </section>
         <section class="skillset summary half">
           <h4>Stuff I'm Good At:</h4>
           <ul>
-            <li>Disc Golf</li>
-            <li>Coding up UI</li>
-            <li>Playing lots of video games</li>
-            <li>Using Bootstrap grid</li>
+            <li>Problem Solving</li>
+            <li>Coding</li>
+            <li>Making Art</li>
+            <li>Staying focused</li>
             <li>Taking long naps</li>
           </ul>
 
