--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li>Problem Solving</li>
             <li>Coding</li>
             <li>Making Art</li>
-            <li>Staying focused</li>
+            <li>Staying Focused!</li>
             <li>Taking long naps</li>
           </ul>
 
