--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </header>
 
     <section class="topresume">
-      <img src="/images/workingstation.jpg" alt="Well organized workspace"> </img>
+      <!--<img src="/images/workingstation.jpg" alt="Well organized workspace"-->
+      <img src="images/workingstation.jpg" alt ="Well organized workspace">
       <h1>Stella Edelmann - Web Developer</h1>
       <h2>Technology is my jam!</h2>
       <hr>
